# modelscope-mcp-server

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  README_zh-CN.md  demo.py  main.py  my_client.py  pyproject.toml
.github/workflows/: codeql.yml  docker.yml  lint.yml  pypi.yml  release.yml  test.yml
scripts/: bump_version.py  publish.py  update_deps.py
src/modelscope_mcp_server/: __init__.py  _version.py  cli.py  client.py  constants.py  server.py  settings.py  types.py
src/modelscope_mcp_server/tools/: aigc.py  context.py  mcp.py  model.py  paper.py  user.py
tests/: test_get_current_user.py  test_search_models.py
tests/tools/: test_aigc_error_handling.py  test_generate_image.py  test_get_current_user.py  test_get_mcp_server_detail.py
