[project]
name = "modelscope-mcp-server"
version = "0.1.0"
description = "ModelScope MCP Server"
readme = "README.md"
authors = [{ name = "pengqun", email = "pengqun.pq@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["fastmcp>=2.10.3"]

[project.scripts]
modelscope-mcp-server = "modelscope_mcp_server:main"
